Fixes UI bugs on mobile screens Fixes issue where YadaGuru heading was too large and throwing off layout. Adds a clearfix to the jumbotron in order to keep the pull-right button in place

--- a/yadaApp/css/main.css
+++ b/yadaApp/css/main.css
@@ -5,13 +5,6 @@ body {
 div {
   position: relative;
 }
-h1 {
- text-align: center;
- font-size: 75px;
-}
-h2 {
-  text-align: center;
-}
 .panel-heading a:after {
   font-family:'Glyphicons Halflings';
   content:"\e114";
@@ -22,3 +15,8 @@ h2 {
   content:"\e080";
 }
 
+@media (min-width: 768px) {
+  .page-header h1 {
+    font-size: 75px;
+  }
+}
